tools/architecture/validate-source-imports/tests/fixtures/invalid/computed-dynamic-import/src/index.ts
import { Domain } from "@platform/domain-core";

const locale = "en";
const localeModule = await import(`./locales/${locale}`);

export const packageName = "@platform/feature-workflow";
